--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/target/
 !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
@@ -12,10 +11,10 @@
 .mvn/
 mvnw
 mvnw.cmd
-/target/
-/bin/
-/build/
-/out/
+target/
+bin/
+build/
+out/
 
 ### IntelliJ IDEA ###
 .idea
