--- a/db-spring-boot-starter/pom.xml
+++ b/db-spring-boot-starter/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>hariko-springboot-base</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>mybatis-spring-boot-starter</artifactId>
+	<artifactId>db-spring-boot-starter</artifactId>
 
 	<dependencies>
 		<dependency>
