--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 !.mvn/wrapper/maven-wrapper.jar
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -9,6 +12,7 @@
 .springBeans
 .sts4-cache
 .mvn/
+.gradle/
 mvnw
 mvnw.cmd
 target/
