--- a/hariko-demo/build.gradle
+++ b/hariko-demo/build.gradle
@@ -46,16 +46,8 @@ apply plugin: 'io.spring.dependency-management'
 
 jacoco{ toolVersion = "0.8.2" }
 repositories {
-	mavenLocal()
+
 	maven { url 'file:///D:/Mycache/.m2/repo/'}
-
-	maven{
-		url rootProject.ext.maven.grails
-	}
-	maven{
-		url rootProject.ext.maven.gradle
-	}
-
 	maven {
 		url rootProject.ext.maven.central
 	}
@@ -75,4 +67,47 @@ dependencies {
 	compile ver['hariko_job']
 	compile ver['lombok']
 	testCompile ver['hariko_test']
+
+	compile 'com.h2database:h2:1.4.197'
+	compile 'org.springframework.boot:spring-boot-starter-thymeleaf:2.0.0.RELEASE'
+
+}
+
+bootJar {
+	excludes = [
+		"**/application.properties",
+		"**/application.yml",
+		"**/bootstrap.yml",
+		"**/bootstrap.properties"
+	]
+	def folder = new File("${rootDir}/src/main/resources/META-INF")
+	folder.mkdirs()
+	new File(folder, "app.properties").write(
+			"apollo.bootstrap.enabled=true\n" +
+			"app.id=${rootProject.name}\n" +
+			"apollo.meta=http://10.30.121.216:9100\n")
+}
+
+configurations { mybatisGenerator_mysql8 }
+
+dependencies {
+	// mybatisGenerator_mysql8依赖包配置
+	mybatisGenerator_mysql8 'org.mybatis.generator:mybatis-generator-core:1.3.5'
+	mybatisGenerator_mysql8 'mysql:mysql-connector-java:8.0.11'
+	mybatisGenerator_mysql8 'com.frame.hariko:hariko-mybatis-plugin:0.0.1-SNAPSHOT'
+}
+
+task mybatisGenerator_mysql8() {
+	group = 'other'
+	description = 'mysql8 mybatis mapper生成工具'
+	doLast {
+		ant.taskdef(
+				name: 'mbgenerator_mysql8',
+				classname: 'org.mybatis.generator.ant.GeneratorAntTask',
+				classpath: configurations.mybatisGenerator_mysql8.asPath
+				)
+		ant.mbgenerator_mysql8(overwrite: true,
+		configfile: 'src/main/resources/generatorConfig.xml', verbose: true) {
+		}
+	}
 }
