--- a/hariko-parent/pom.xml
+++ b/hariko-parent/pom.xml
@@ -388,6 +388,12 @@
 				<groupId>com.dangdang</groupId>
 				<artifactId>elastic-job-lite-spring</artifactId>
 				<version>2.1.5</version>
+				<exclusions>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
