--- a/hariko-demo/src/main/resources/application.properties
+++ b/hariko-demo/src/main/resources/application.properties
@@ -14,7 +14,6 @@ spring.http.encoding.force=true
 spring.http.client.enable=true
 spring.http.client.connectionTimeout=5000
 spring.http.client.readTimeout=10000
-spring.http.client.connectionTimeout=10000
 
 #spring restTemplate conf
 
@@ -38,21 +37,19 @@ mybatis.typeAliasesPackage=com.frame.hariko.model
 mybatis.mapperLocations=classpath:/mapper/*.xml
 mybatis.plugins=page
 
-################################h2\u6570\u636e\u6e90\u914d\u7f6e############################
-#url\u6709\u4ee5\u4e0b\u51e0\u79cd\u5f62\u5f0f:
-# jdbc:h2:E:*/database \u4f1a\u6301\u4e45\u5316\u5230\u78c1\u76d8\u6587\u4ef6\uff0c\u4f46\u662f\u662f\u5355\u8fde\u63a5
-# jdbc:h2:tcp://IP/database \u901a\u8fc7\u8fdc\u7a0b\u8fde\u63a5\u7684\u65b9\u5f0f
-# jdbc:h2:mem:database \u76f4\u63a5\u5728\u5185\u5b58\u4e2d\uff0c\u7a0b\u5e8f\u53ea\u8981\u91cd\u542f\u5c31\u4f1a\u6d88\u5931
-spring.datasource.url=jdbc:h2:file:~/hariko
+################################h2############################
+# jdbc:h2:E:*/database 
+# jdbc:h2:tcp://IP/database 
+# jdbc:h2:mem:database 
+spring.datasource.url=jdbc:h2:file:D:/cache/hariko/demo
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=hariko
 spring.datasource.password=hariko
-#\u7a0b\u5e8f\u542f\u52a8\u540e\u4f1a\u521d\u59cb\u5316\u8fd9\u4e9b\u811a\u672c\u6587\u4ef6
 spring.datasource.schema=classpath:/hariko/schema.sql
 spring.datasource.data=classpath:/hariko/data.sql
 spring.datasource.initialization-mode=always
 spring.h2.console.settings.web-allow-others=true
-spring.h2.console.path=/h2-console/hariko
+spring.h2.console.path=/h2-console/demo
 spring.h2.console.enabled=true
 
 #log conf
