--- a/hariko-demo/src/main/resources/application.properties
+++ b/hariko-demo/src/main/resources/application.properties
@@ -6,7 +6,7 @@ apollo.meta=http://10.21.0.24:9100
 #spring conf
 # Servlet Container Server settings
 spring.application.name=hariko-demo
-server.port=8087
+server.port=80
 spring.profiles.active=dev
 spring.http.encoding.enabled=true
 spring.http.encoding.charset=utf-8
@@ -52,6 +52,8 @@ spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console/demo
 spring.h2.console.enabled=true
 
+feign.hystrix.enabled = false
+
 #log conf
 logging.level.org.thymeleaf.TemplateEngine=info
 
@@ -59,3 +61,8 @@ logging.level.org.thymeleaf.TemplateEngine=info
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+application.weixin.cgi.bin.url=https://api.weixin.qq.com/cgi-bin/
+we.chat.qr.app.id=wxc1fb3cdfcce26234
+we.chat.qr.app.secret=2c965e9ce37274ad4560e114ba596b9d
+
